<resources>
    <string name="app_name">BOOK A MEDICAL</string>
    <string name="nav_home">Trang Chủ</string>
    <string name="nav_profile">Thông Tin</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">Tài Khoản</string>
    <string name="nav_change_password">Đổi Mật Khẩu</string>
    <string name="nav_logout">Đăng Xuất</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="ung_thu_am_dao_la_gi">Ung thư âm đạo là bệnh lý ác tính xuất phát từ các tế bào vùng âm đạo. Đây là bệnh lý ít gặp chiếm khoảng 3-5% ung thư phụ khoa. Phần lớn ung thư âm đạo xảy ra ở phụ nữ lớn tuổi, có 80-85% các trường hợp sau mãn kinh. Bệnh gặp rất ít ở phụ nữ dưới 40 tuổi và rất hiếm ở phụ nữ có thai.</string>
    <string name="ung_thu_am_dao_nguyen_nhan">Nguyên nhân ung thư âm đạo hiện chưa được xác định rõ ràng. Một số yếu tố làm tăng nguy cơ mắc bệnh như:</string>
    <string name="ung_thu_am_dao_nguyen_nhan_1">Yếu tố nội tiết: bệnh thường gặp ở phụ nữ chậm có kinh và sớm mãn kinh</string>
    <string name="ung_thu_am_dao_nguyen_nhan_2">Phụ nữ có mức sống kinh tế thấp</string>
    <string name="ung_thu_am_dao_nguyen_nhan_3">Người hút thuốc lá</string>
    <string name="ung_thu_am_dao_nguyen_nhan_4">Người suy giảm miễn dịch</string>
    <string name="ung_thu_am_dao_nguyen_nhan_5">Người mắc một số bệnh không lây nhiễm: tiểu đường, tăng huyết áp</string>
    <string name="ung_thu_am_dao_nguyen_nhan_6">Đột biến gen: đột biến gen PRAD1 và gen p53 có liên quan đến mắc ung thư âm hộ, âm đạo.</string>
    <string name="ung_thu_am_dao_nguyen_nhan_7">Các tổn thương lành tính tại âm hộ, âm đạo như nghịch dưỡng âm hội, Condylome sùi, bạch biến</string>
    <string name="ung_thu_am_dao_nguyen_nhan_8">Nhiễm virus HPV</string>
    <string name="ung_thu_am_dao_trieu_chung">Các triệu chứng của ung thư âm đạo âm hộ bao gồm:</string>
    <string name="ung_thu_am_dao_trieu_chung_1">Ngứa: ngứa kéo dài nhiều tháng đến nhiều năm trước khi bệnh được chẩn đoán</string>
    <string name="ung_thu_am_dao_trieu_chung_2">Đau rát vùng u, đau khi đi tiểu do kích thích của nước tiểu lên bề mặt u</string>
    <string name="ung_thu_am_dao_trieu_chung_3">Chảy máu chảy dịch có mùi hôi khi u tăng kích thước bị hoại tử, nhiễm trùng</string>
    <string name="ung_thu_am_dao_trieu_chung_4">Sờ thấy khối u ở cửa mình: u có thể sùi như súp lơ hoặc loét, nhiễm cứng. Bệnh nhân thường đến khám vì sờ thấy cục trong âm đạo.</string>
    <string name="ung_thu_am_dao_trieu_chung_5">Có thể sờ thấy hạch bẹn. Nếu hạch to có thể vỡ loét ra da hoặc chèn ép tĩnh mạch đùi gây phù, viêm tĩnh mạch huyết khối mạn tính</string>
    <string name="ung_thu_am_dao_trieu_chung_6">Khi u tiến triển lan rộng xâm lấn vào niệu đạo, bàng quang, vách âm đạo-trực tràng có thể gây các lỗ rò bàng quang- âm đạo, rò trực tràng âm đạo</string>
    <string name="ung_thu_am_dao_doi_tuong_1">Người có quan hệ tình dục với nhiều đối tác</string>
    <string name="ung_thu_am_dao_doi_tuong_2">Người có quan hệ tình dục sớm</string>
    <string name="ung_thu_am_dao_doi_tuong_3">Người hút thuốc lá</string>
    <string name="ung_thu_am_dao_doi_tuong_4">Người mắc các bệnh suy giảm miễn dịch: HIV</string>
    <string name="ung_thu_am_dao_doi_tuong_5">Người có tiền sử gia đình mắc bệnh ung thư vùng âm đạo, âm hộ</string>
    <string name="ung_thu_am_dao_phong_ngua">Khám sức khỏe định kỳ 6 tháng/lần tại cơ sở Y tế có chuyên khoa sản</string>
    <string name="ung_thu_am_dao_phong_ngua_1">Quan hệ tình dục an toàn, không quan hệ tình dục sớm</string>
    <string name="ung_thu_am_dao_phong_ngua_2">Tiêm phòng HPV theo chỉ dẫn</string>
    <string name="ung_thu_am_dao_phong_ngua_3">Giữ vệ sinh thân thể, vệ sinh vùng kín sạch sẽ</string>
    <string name="ung_thu_am_dao_phong_ngua_4">Không hút thuốc lá, uống rượu bia hay sử dụng chất kích thích.</string>
    <string name="ung_thu_am_ho_la_gi_1">Âm hộ là khu vực da bao quanh niệu đạo và âm đạo, bao gồm âm vật và môi âm hộ. Ung thư âm hộ là một loại ung thư xảy ra ở khu vực bề mặt ngoài của cơ quan sinh dục nữ.</string>
    <string name="ung_thu_am_ho_la_gi_2">Ung thư âm hộ thường hình thành như một cục hoặc đau trên âm hộ thường gây ngứa. Mặc dù nó có thể xảy ra ở mọi lứa tuổi, ung thư âm hộ thường được chẩn đoán ở người lớn tuổi.</string>
    <string name="ung_thu_am_ho_la_gi_3">Điều trị ung thư âm hộ bao gồm phẫu thuật để loại bỏ ung thư và một lượng nhỏ các mô khỏe mạnh xung quanh. Đôi khi phẫu thuật ung thư âm hộ đòi hỏi phải loại bỏ toàn bộ âm hộ. Ung thư âm hộ sớm hơn được chẩn đoán, ít có khả năng cần phải phẫu thuật rộng rãi để điều trị.</string>
    <string name="ung_thu_am_ho_nguyen_nhan">Hiện nay, các nhà khoa học chưa tìm ra nguyên nhân ung thư âm hộ. Nhìn chung, các bác sĩ biết rằng ung thư bắt đầu khi một tế bào phát triển đột biến trong DNA của nó. Các đột biến cho phép tế bào phát triển và phân chia nhanh chóng. Tế bào và con của nó tiếp tục sống khi các tế bào bình thường khác sẽ chết theo chu kỳ. Các tế bào tích tụ tạo thành một khối u có thể là ung thư, xâm lấn mô gần đó và lan sang các bộ phận khác của cơ thể.</string>
    <string name="ung_thu_am_ho_nguyen_nhan_cac_loai">Các loại ung thư âm hộ</string>
    <string name="ung_thu_am_ho_nguyen_nhan_ke_hoach">Khi biết được loại tế bào ung thư âm hộ giúp bác sĩ lên kế hoạch điều trị hiệu quả nhất bao gồm:</string>
    <string name="ung_thu_am_ho_nguyen_nhan_ke_hoach_1">U biểu mô tế bào vảy (Squamous cell carcinoma). Ung thư này bắt đầu trong các tế bào mỏng, phẳng nằm trên bề mặt của âm hộ. Hầu hết ung thư âm hộ là ung thư biểu mô tế bào vảy.</string>
    <string name="ung_thu_am_ho_nguyen_nhan_ke_hoach_2">Âm hộ khối u ác tính (Vulvar melanoma). Ung thư này bắt đầu trong các tế bào sản xuất sắc tố được tìm thấy trong da của âm hộ.</string>
    <string name="ung_thu_am_ho_trieu_chung">Các dấu hiệu ung thư âm hộ có thể bao gồm:</string>
    <string name="ung_thu_am_ho_trieu_chung_1">Ngứa mà khỏi</string>
    <string name="ung_thu_am_ho_trieu_chung_2">Đau và ấn vào thì đau</string>
    <string name="ung_thu_am_ho_trieu_chung_3">Chảy máu ngoài kỳ kinh nguyệt</string>
    <string name="ung_thu_am_ho_trieu_chung_4">Thay đổi da, chẳng hạn như thay đổi màu sắc hoặc dày lên ở âm hộ</string>
    <string name="ung_thu_am_ho_trieu_chung_5">U cục, mụn cóc hoặc vết loét</string>
    <string name="ung_thu_am_ho_trieu_chung_01">Khi nào đi khám bác sĩ?</string>
    <string name="ung_thu_am_ho_trieu_chung_02">Đặt lịch hẹn bác sĩ phụ khoa nếu nghi ngờ hoặc gặp bất kỳ triệu chứng dai dẳng trên khiến người bệnh lo lắng.</string>
    <string name="ung_thu_am_ho_duong_lay">Ung thư âm hộ không lây truyền từ người bệnh sang người khỏe mạnh.</string>
    <string name="ung_thu_am_ho_doi_tuong">Mặc dù nguyên nhân chính xác của ung thư âm hộ chưa được biết đến, một số yếu tố dường như làm tăng nguy cơ mắc bệnh, bao gồm:</string>
    <string name="ung_thu_am_ho_doi_tuong_1">Tăng tuổi. Nguy cơ ung thư âm hộ tăng theo tuổi, mặc dù nó có thể xảy ra ở mọi lứa tuổi. Độ tuổi trung bình được chẩn đoán ung thư âm hộ là 65.</string>
    <string name="ung_thu_am_ho_doi_tuong_2">Nhiễm virus papillomavirus ở người (HPV). HPV là một bệnh lây truyền qua đường tình dục làm tăng nguy cơ mắc một số bệnh ung thư, bao gồm ung thư âm hộ và ung thư cổ tử cung. Người trẻ tuổi có hoạt động tình dục sẽ bị phơi nhiễm với HPV, nhưng đối với hầu hết các trường hợp nhiễm trùng sẽ tự biến mất. Đối với một số người, nhiễm trùng gây ra thay đổi tế bào và làm tăng nguy cơ ung thư trong tương lai.</string>
    <string name="ung_thu_am_ho_doi_tuong_3">Hút thuốc. Hút thuốc lá làm tăng nguy cơ ung thư âm hộ.</string>
    <string name="ung_thu_am_ho_doi_tuong_4">Hệ thống miễn dịch suy yếu. Những người dùng thuốc để ức chế hệ thống miễn dịch, chẳng hạn như những người đã trải qua cấy ghép nội tạng và những người có những bệnh làm suy yếu hệ thống miễn dịch như virus suy giảm miễn dịch ở người (HIV) đều có nguy cơ mắc ung thư âm hộ.</string>
    <string name="ung_thu_am_ho_doi_tuong_5">Có tiền sử mắc bệnh tiền ung thư. Viêm lộ tuyến nội mạc âm hộ là tình trạng tiền ung thư làm tăng nguy cơ ung thư âm hộ. Hầu hết các trường hợp u nguyên bào âm hộ sẽ không bao giờ phát triển thành ung thư, nhưng một số ít đã tiếp tục trở thành ung thư âm hộ xâm lấn. Vì lý do này, bác sĩ có thể đề nghị điều trị để loại bỏ khu vực của các tế bào bất thường và kiểm tra theo dõi định kỳ.</string>
    <string name="ung_thu_am_ho_doi_tuong_6">Bệnh Linche xơ hóa làm cho da âm hộ trở nên mỏng và ngứa, tăng nguy cơ ung thư âm hộ.</string>
    <string name="ung_thu_am_ho_phong_ngua">Giảm nguy cơ mắc bệnh lây truyền qua đường tình dục</string>
    <string name="ung_thu_am_ho_phong_ngua_01">Để giảm nguy cơ mắc bệnh ung thư âm hộ, hãy giảm nguy cơ nhiễm virus lây truyền qua đường tình dục:</string>
    <string name="ung_thu_am_ho_phong_ngua_1">Hạn chế số lượng bạn tình của bạn. Nếu có nhiều bạn tình, nguy cơ phơi nhiễm với HPV càng cao.</string>
    <string name="ung_thu_am_ho_phong_ngua_2">Sử dụng bao cao su mỗi khi bạn quan hệ tình dục. Bao cao su có thể làm giảm nguy cơ nhiễm virus HPV nhưng không thể bảo vệ hoàn toàn chống lại nó.</string>
    <string name="ung_thu_am_ho_phong_ngua_3">Tiêm vắc-xin HPV. Trẻ em và thanh niên có thể xem xét vắc-xin HPV, giúp bảo vệ chống lại các chủng vi-rút được cho là gây ra hầu hết các trường hợp ung thư âm hộ.</string>
    <string name="ung_thu_am_ho_phong_ngua_02">Khám định kỳ về vùng xương chậu</string>
    <string name="ung_thu_am_ho_phong_ngua_03">Phụ nữ nên thường xuyên khám sức khỏe, đặc biệt là cơ quan ở vùng khung xương chậu. Thông qua xét nghiệm, khai thác tiền sử bệnh tật và khám trực tiếp âm hộ và cơ quan sinh sản bên trong để bác sĩ phát hiện các dấu hiệu bất thường.</string>
    <string name="u_nang_buong_trung_la_gi_1">U nang buồng trứng là một loại khối u hình thành trong buồng trứng của phụ nữ, u có vỏ bọc bên ngoài và chứa dịch lỏng bên trong. U có thể phát triển từ các loại mô của buồng trứng hay từ mô của cơ quan khác.</string>
    <string name="u_nang_buong_trung_la_gi_2">Đây là loại khối u sinh dục rất phổ biến ở nữ giới, đặc biệt là phụ nữ trong độ tuổi sinh đẻ, tỷ lệ mắc bệnh là 3.6% trong số các bệnh lý phụ khoa, nhiều hơn bất kỳ khối u nào khác của đường sinh dục.</string>
    <string name="u_nang_buong_trung_la_gi_3">Giai đoạn đầu, bệnh tiến triển âm thầm nên khó được chẩn đoán sớm, chủ yếu là được phát hiện tình cờ qua thăm khám phụ khoa. Tuy nhiên, khối u ác tính thì tiến triển rất nhanh với các biểu hiện rầm rộ trên lâm sàng. Việc phát hiện sớm u nang buồng trứng có ý nghĩa rất lớn, giúp hạn chế các biến chứng nguy hiểm như u nang buồng trứng xoắn, ung thư buồng trứng, vô sinh, thậm chí là tử vong.</string>
    <string name="u_nang_buong_trung_nguyen_nhan_1">Về hormon: Các vấn đề liên quan đến hormone hoặc các thuốc hỗ trợ rụng trứng có thể làm xuất hiện khối u buồng trứng cơ năng.</string>
    <string name="u_nang_buong_trung_nguyen_nhan_2">Mang thai: Ở giai đoạn đầu của thai kỳ, có thể xuất hiện tự nhiên một vài u nang buồng trứng để hỗ trợ bào thai cho đến khi nhau thai được hình thành. Đôi khi u cũng xuất hiện cho đến hết thai kỳ.</string>
    <string name="u_nang_buong_trung_nguyen_nhan_3">Lạc nội mạc tử cung: Lạc nội mạc tử cung ở phụ nữ cũng là một trong những nguyên nhân dẫn đến u nang buồng trứng.</string>
    <string name="u_nang_buong_trung_nguyen_nhan_4">Nhiễm trùng vùng chậu: Nhiễm trùng buồng trứng, vòi trứng có thể xuất phát từ những nhiễm trùng ở vùng chậu, và có thể bị áp-xe hóa.</string>
    <string name="t_l_ch">Đặt Lịch</string>
    <string name="b_nh_n">Bệnh Án</string>
    <string name="thanh_to_n">Thanh Toán</string>
</resources>