<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_user"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_profile_user"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_dat_lich_user"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/t_l_ch"/>
        <item
            android:id="@+id/nav_benh_an_user"
            android:icon="@drawable/baseline_assignment_turned_in_24"
            android:title="@string/b_nh_n"/>
        <item
            android:id="@+id/nav_phieu_thanh_toan_user"
            android:icon="@drawable/baseline_assignment_turned_in_24"
            android:title="@string/thanh_to_n"/>

    </group>
    <item
        android:title="@string/nav_account">

        <menu>
            <item
                android:id="@+id/nav_change_password_user"
                android:icon="@drawable/baseline_lock_reset_24"
                android:title="@string/nav_change_password"/>
            <item
                android:id="@+id/nav_logout_user"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/nav_logout"/>
        </menu>

    </item>

</menu>